--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/DragonTheme.NoActionBar">
-
         <activity
             android:name=".ui.screen.start.StartActivity"
             android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.screen.order.OrderActivity"
             android:parentActivityName=".ui.screen.start.StartActivity">
@@ -29,7 +28,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.screen.start.StartActivity"/>
         </activity>
-
         <activity
             android:name=".ui.screen.settings.SettingsActivity"
             android:label="@string/title_settings"
@@ -39,7 +37,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.screen.start.StartActivity"/>
         </activity>
-
         <activity
             android:name=".ui.screen.history.HistoryActivity"
             android:label="@string/title_history"
@@ -49,9 +46,30 @@
                 android:value=".ui.screen.start.StartActivity"/>
         </activity>
 
+        <!-- Station widget -->
+
+        <receiver android:name=".ui.widget.StationWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info_station"/>
+        </receiver>
+
+        <activity android:name=".ui.widget.StationWidgetConfigureActivity">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+            </intent-filter>
+        </activity>
+
+        <!-- Metadata -->
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="c208eb302fab96d2350bc2f78bd866f5fb4627a8"/>
+
     </application>
 
 </manifest>
