--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'spoon'
 apply plugin: 'com.github.triplet.play'
 
 android {
-    
+
     //noinspection GradleDependency // Keep 23.0.2 for travis
     buildToolsVersion "23.0.2"
     compileSdkVersion 23
@@ -34,7 +34,7 @@ android {
     signingConfigs {
 
         debug {
-            storeFile file('debug.keystore')
+            storeFile file('../debug.keystore')
         }
 
         release {
